I implemented registration and authentication using keycloak as an authorization service, added all the endpoints to interact with the interface, and used swagger to document them. I have also successfully tested all api methods on my own and am starting to write automated tests and implement access_token acquisition by passing refresh_token.